--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "homepage": "https://BhaktaRout038.github.io/bhakta",
   "name": "starter",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,9 +18,10 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
+   
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
